--- a/_posts/2020-08-27-java-1.md
+++ b/_posts/2020-08-27-java-1.md
@@ -2,8 +2,8 @@
 title: 객체지향 프로그래밍 - 1
 author: hkx2r0i
 date: 2020-08-27 21:08:00 +0800
-categories: [Programming, Java]
-tags: [Java]
+categories: [Programming, 객체지향 프로그래밍]
+tags: [객체지향 프로그래밍]
 math: true
 ---
 
